applications/openlookeng-previwe-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-preview-website
  name: openlookeng-preview-website
