applications/openlookeng-previwe-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header Cache-Control no-store;
      add_header Pragma no-cache;
      add_header X-Frame-Options "SAMEORIGIN";
      add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'self'";
  name: openlookeng-preview-website-ingress-main
spec:
  tls:
    - hosts:
        - preview.openlookeng.io
      secretName: openlookeng-preview-website-tls-main
  rules:
    - host: preview.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-preview-website-internal
              servicePort: 80
            path: /
